# set-embedding

./: Makefile  Training.dockerfile
src/: bigquery_param_setting.py  create_job.py  experiment_config.yaml  gcs_utils.py  parameters.yaml  pyproject.toml
src/evaluation/: clustering.py  distance_to_tag_order.py  distortion_distribution.py  held_out_attributes.py  run_evaluation.py  top_playlist_for_user.py
src/training/: experiment.py  pipeline.py
src/training/data_handling/: data_utils.py  dataloader.py  download_data.py  preprocesser.py
src/training/distortion/: dist_metrics.py  min_distortion.py  train_to_reference.py
src/training/div/: model_utils.py  utils.py
src/training/models/: model_loader.py  models.py  training.py
src/training/models/deep_sets/: modules.py
